[package]
name = "sugarfunge-k8s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.73.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_23"] }
serde_json = "1.0.68"
anyhow = "1.0.44"
tokio = { version = "1.14.0", features = ["full"] }
derive_more = "0.99.17"
clap = { version = "3.1.18", features = ["derive"] }
ron = "0.7.0"
serde = "1.0.137"
